tests/ours/syntax_error/if_inside_if.drac
main(y){
    var x;
    x = 3;
    if(if x==3){

    }
}